[metadata]
name = rnatk
summary = RNA Tool Kit
author = Yu Zhou
author-email = yu.zhou@whu.edu.cn
license = none
home-page = https://github.com/zhouyulab/rnatk
description-file = README.md
classifier =
    Development Status :: 4 - Beta
    Programming Language :: Python 3

[entry_points]
console_scripts =
    rnatk_parse_barcode = rnatk.hts.barcode:run
    rnatk_fqfilter = rnatk.op.fqfilter:run
    rnatk_bam2uniqbc = rnatk.bin.bam2uniqbc:run
    rnatk_bampe2uniqbc = rnatk.bin.bampe2uniqbc:run
    rnatk_csv2filter = rnatk.bin.csv2filter:run
    rnatk_bed8To12 = rnatk.bin.bed8To12:run
    rnatk_pemerge = rnatk.op.pemerge:run
    rnatk_ja = rnatk.ncov.subgenome:run
    rnatk_jsfilter = rnatk.ncov.jsfilter:run
    rnatk_jsflank = rnatk.ncov.jsflank:run
    rnatk_addconst = rnatk.rna.constraint:run
    rnatk_jsrand = rnatk.ncov.jsrand:run
    rnatk_hyb2cofold = rnatk.rna.hybrid:run
    rnatk_fixcofold = rnatk.rna.constraint:fix_cofold


[files]
# Add here 'data_files', 'packages' or 'namespace_packages'.
# Additional data files are defined as key value pairs of target directory
# and source location from the root of the repository:

[extras]
# Add here additional requirements for extra features, like:
# PDF =
#    ReportLab>=1.2

[test]
# py.test options when running `python setup.py test`
addopts = tests

[tool:pytest]
# Options for py.test:
addopts = -p no:warnings -v -s
#    --cov rnatk --cov-report term-missing
#    --verbose

[aliases]
docs = build_sphinx

[bdist_wheel]
# Use this option if your package is pure-python
universal = 1

[build_sphinx]
source_dir = docs
build_dir = docs/_build

[pbr]
# Let pbr run sphinx-apidoc
autodoc_tree_index_modules = True
# autodoc_tree_excludes = ...
# Let pbr itself generate the apidoc
# autodoc_index_modules = True
# autodoc_exclude_modules = ...
# Convert warnings to errors
# warnerrors = True

[devpi:upload]
# Options for the devpi: PyPI server and packaging tool
# VCS export must be deactivated since we are using setuptools-scm
no-vcs = 1
formats = bdist_wheel
#    RXP
